# sgl

./: .gitignore  CMakeLists.txt  COPYRIGHT.txt  LICENSE  README.md
demo/: CMakeLists.txt  demo_core.cpp  demo_sdl.cpp
include/sgl/: any_event.h  application.h  color.h  context.h  draw_list.h  draw_list_vector.h  null_state_storage.h  overloaded.h  point.h  rect.h  size.h  state.h  state_storage.h  state_storage_heap.h  token.h  token_mem_marker.h  version.h  xxh32.h
include/sgl/cpp/: array.h  bit.h  except.h  functional.h  memory.h  optional.h  span.h  stdint.h  string_view.h  unordered_map.h  utility.h  variant.h  vector.h
include/sgl/detail/: draw_items.h
include/sgl/events/: mouse_motion.h  noop.h  quit_request.h
include/sgl/input/: mouse_buttons.h
include/sgl/platform/: coord.h  native_color.h
include/sgl/sdl/: sdl_application.h  sys_info.h
src/: CMakeLists.txt  application.cpp  draw_list.cpp  draw_list_vector.cpp  null_state_storage.cpp  state_storage.cpp  state_storage_heap.cpp  version.cpp
src/sdl/: CMakeLists.txt  sdl_application.cpp  sgl_sdl_app.cpp  sgl_sdl_main_stub.cpp  sgl_translate.h  sys_info.cpp
test/: CMakeLists.txt  core_tests.cpp  mock_application.h  test_application.cpp  test_geom.cpp  test_state_storage_heap.cpp
